--- a/style.css
+++ b/style.css
@@ -50,3 +50,35 @@ html,body {
 	border: 1px solid #16a085;
 	cursor: pointer;
 }
+.usernameError {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
+.emailError {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
+.passwordError {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
+.passwordError1 {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
