--- a/style.css
+++ b/style.css
@@ -82,3 +82,19 @@ html,body {
 	color: red;
 	display: none;
 }
+.passwordError2 {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
+.confirmPasswordError {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
