--- a/style.css
+++ b/style.css
@@ -98,3 +98,44 @@ html,body {
 	color: red;
 	display: none;
 }
+/*.card {
+	justify-content: center;
+	align-items: center;
+	display: flex;
+}*/
+.card img{
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: 80px;
+}
+.card input{
+	margin-top: 10px;
+	margin-bottom: 10px;
+	display: none;
+}
+label {
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	width: 100%;
+	background: #16a085;
+	color: #fff;
+	padding: 12px;
+	margin: 10px auto;
+	border-radius: 5px;
+	cursor: pointer;
+	font-weight: 500;
+	font-size: 18px;
+}
+
+.imageSizeError {
+	text-align: left;
+    margin-left: 5px;
+    font-size: 14px;
+    margin-bottom: 10px;
+	color: red;
+	display: none;
+}
